Random quote app

--- a/src/components/adminpage/AdminPage.scss
+++ b/src/components/adminpage/AdminPage.scss
@@ -6,7 +6,7 @@ $font: "Dosis", sans-serif;
   display: flex;
   width: 100vw;
   height: 100vh;
-  background-color: #63a375;
+  background-color: #30343f;
 
   &__content {
     align-items: center;
