--- a/src/components/authorization/AuthPage.scss
+++ b/src/components/authorization/AuthPage.scss
@@ -11,6 +11,12 @@ $font: "Dosis", sans-serif;
   width: 100vw;
   height: 100vh;
 
+  &__title {
+    font-family: $font;
+    padding: 15px 5px;
+    text-align: center;
+  }
+
   &__authForm {
     margin: auto;
   }
