--- a/src/components/newCompliment/NewCompliment.scss
+++ b/src/components/newCompliment/NewCompliment.scss
@@ -70,7 +70,7 @@ $formbgColor: #e1e1dd;
     color: #fff;
     background-color: #30343f;
     border-radius: 4px;
-    margin-right: 5px;
+    margin-right: 2.5px;
     &:hover {
       opacity: 0.8;
       transform: scale(0.96);
@@ -88,6 +88,7 @@ $formbgColor: #e1e1dd;
     color: #fff;
     background-color: #30343f;
     border-radius: 4px;
+    margin-left: 2.5px;
 
     &:hover {
       opacity: 0.8;
