--- a/src/components/adminpage/AdminPage.scss
+++ b/src/components/adminpage/AdminPage.scss
@@ -60,6 +60,7 @@ $font: "Dosis", sans-serif;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 5px;
     padding: 5px;
     width: 400px;
     background-color: #ffe381;
